tools/fixtures/should_fail/missing_wait.x3s
* while loop without wait should fail
$i = 0
while $i < 10
inc $i
end
